--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git checkout develop
-        git pull out develop --no-rebase
+        git pull out main --no-rebase
         git push origin develop
 
     - name: Merge to main
