--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   frontend:
+    image: frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -11,6 +12,7 @@ services:
       - backend
 
   backend:
+    image: backend:latest
     build:
       context: ./server
       dockerfile: Dockerfile
