--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           EOF
 
       - name: Prepare initial deployment if needed
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/ssh-action@v0.9.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
@@ -66,7 +66,7 @@ jobs:
           strip_components: 1
 
       - name: Execute deployment
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/ssh-action@v0.9.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
