--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          key: ${{ secrets.KEY }}
           script: |
             cd /opt/app
             # Если это первый деплой, создаем БД
@@ -60,7 +60,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}  
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          key: ${{ secrets.KEY }}
           source: "backend.tar,frontend.tar,deploy.sh,docker-compose.yml"
           target: "/opt/app/"
           strip_components: 1
@@ -70,7 +70,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          key: ${{ secrets.KEY }}
           script: |
             cd /opt/app
             chmod +x deploy.sh
