--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
             # Если это первый деплой, создаем БД
             if [ ! -f .initialized ]; then
               echo "🔄 First deployment - setting up database..."
-              docker compose -f docker-compose.yml up -d database
+              docker compose -f docker-compose.yml up -d postgres
               sleep 30
               touch .initialized
             else
