--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
           
           docker save backend:latest -o backend.tar
           docker save frontend:latest -o frontend.tar
+          docker save postgres:latest -o postgres.tar
           
           # Создаем скрипт деплоя
           cat > deploy.sh << 'EOF'
@@ -25,35 +26,18 @@ jobs:
           echo "🔄 Loading Docker images..."
           docker load -i backend.tar
           docker load -i frontend.tar
+          docker load -i postgres.tar
           
           echo "🚀 Starting/updating containers (preserving database)..."
           # Останавливаем только app-контейнеры, БД продолжает работать
-          docker compose -f docker-compose.yml stop lingua-backend lingua-frontend || true
+          docker compose -f docker-compose.yml stop lingua-backend lingua-frontend lingua-postgres || true
           
           # Запускаем с обновленными образами
-          docker compose -f docker-compose.yml up -d lingua-backend lingua-frontend
+          docker compose -f docker-compose.yml up -d lingua-backend lingua-frontend lingua-postgres
           
           echo "✅ App deployment complete!"
-          docker images | grep -E "(lingua-backend|lingua-frontend)"
+          docker images | grep -E "(lingua-backend|lingua-frontend|lingua-postgres)"
           EOF
-
-      - name: Prepare initial deployment if needed
-        uses: appleboy/ssh-action@v1.2.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.KEY }}
-          script: |
-            cd /opt/app
-            # Если это первый деплой, создаем БД
-            if [ ! -f .initialized ]; then
-              echo "🔄 First deployment - setting up database..."
-              docker compose -f docker-compose.yml up -d postgres
-              sleep 30
-              touch .initialized
-            else
-              echo "✅ Database already initialized - preserving data"
-            fi
 
       - name: Upload files to server
         uses: appleboy/scp-action@v0.1.4
@@ -61,7 +45,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}  
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.KEY }}
-          source: "backend.tar,frontend.tar,deploy.sh,docker-compose.yml"
+          source: "backend.tar,frontend.tar,postgres.tar,deploy.sh,docker-compose.yml"
           target: "/opt/app/"
           strip_components: 1
 
