--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,29 @@
-name: Simple Tar Deploy
+name: CD - Deploy to VPS
 
 on:
   push:
-    branches: [ main ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Build and push docker images
-        uses: docker/build-push-action@v6.18.0
-        with:
-          image: vlad1m1/max-app
-          registry: docker.io
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Execute deployment
-        uses: appleboy/ssh-action@v1.2.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.KEY }}
-          script: |
-            cd /opt/app
-            docker stop vlad1m1/max-app-frontend vlad1m1/max-app-backend
-            docker rm vlad1m1/max-app-frontend vlad1m1/max-app-backend
-            docker login -u {{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker pull vlad1m1/max-app:latest
-            docker run -d -p 80:80 vlad1m1/max-app:latest
+      - name: Deploy to VPS
+        run: |
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
+            cd /opt/myapp && \
+            git pull && \
+            docker compose pull && \
+            docker compose up -d --remove-orphans
+          "
